{
    "name": "InputControls",
    "maps": [
        {
            "name": "DefaultMap",
            "id": "d5e6abf5-a49b-4749-b64e-215e38e68563",
            "actions": [
                {
                    "name": "IsDragging",
                    "type": "Button",
                    "id": "df5da54c-b299-428f-acb5-5f8a52018cee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "821bb4ac-233f-46c9-b259-2c28684a2054",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ae9e627-f875-4b45-9cec-d1075fc262e0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsDragging",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c073653-fbdd-4853-95f0-a1de87f1e739",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}